--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "main.c" "ap_config.c" "sta_config.c"
     INCLUDE_DIRS "."
-    REQUIRES esp_wifi esp_http_server cjson esp_spiffs
+    REQUIRES esp_wifi esp_http_server esp_spiffs
 )
